# jackery-ha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml
artifacts/jackery-ha-integration/: code-review.md
custom_components/jackery/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/jackery/translations/: en.json
docs/: plan.md
src/jackery_ha/: __init__.py
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_init.py  test_manifest.py  test_number.py  test_select.py  test_sensor.py  test_switch.py
